syntax = "proto3";

option csharp_namespace = "WhojooSite.RecipesModule.Protos.Recipes";

import "Recipes/recipe.proto";
import "Common/operation_failure_result.proto";

package whojoo_site.recipes_module.recipes;

message RecipeByIdResponse {
  oneof result {
    Recipe recipe = 1;
    common.OperationFailureResult failure_result = 2;
  }
}