syntax = "proto3";

option csharp_namespace = "WhojooSiteRecipes.Module.Protos.Recipes";

package whojoo_site.recipes_module.recipes;

message RecipeId {
  int64 id = 1;
}